// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewTests Views can adjust backface visibility 1`] = `
{
  "AutomationId": "view-test-backface-visibility",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 368,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 368,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 29,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,10",
              "Text": "View #1, front is visible, back is hidden.",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 150,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 29,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Background": "#FF0000FF",
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 150,
                  "HorizontalAlignment": "Stretch",
                  "Left": 284,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 150,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "Height": 19,
                      "HorizontalAlignment": "Stretch",
                      "Left": 58,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "Front",
                      "Top": 65,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 33,
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
                {
                  "Background": "#FFFF0000",
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 150,
                  "HorizontalAlignment": "Stretch",
                  "Left": 284,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 150,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "Height": 38,
                      "HorizontalAlignment": "Stretch",
                      "Left": 10,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "Back (You should not see this)",
                      "Top": 56,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 130,
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 39,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,10,0,10",
              "Text": "View #2, front is hidden, back is visible.",
              "Top": 179,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 150,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 218,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Background": "#FF0000FF",
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 150,
                  "HorizontalAlignment": "Stretch",
                  "Left": 284,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 150,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "Height": 38,
                      "HorizontalAlignment": "Stretch",
                      "Left": 8,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "Front (You should not see this)",
                      "Top": 56,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 134,
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
                {
                  "Background": "#FFFF0000",
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 150,
                  "HorizontalAlignment": "Stretch",
                  "Left": 284,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 150,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "Height": 19,
                      "HorizontalAlignment": "Stretch",
                      "Left": 60,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "Back",
                      "Top": 65,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 29,
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ViewTests Views can have a custom nativeID 1`] = `
{
  "AutomationId": "nativeid",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "A View with a nativeID "native-id-view"",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ViewTests Views can have accessibility customization 1`] = `
{
  "AccessibilityRole": "Button",
  "AccessibilityStateBusy": true,
  "AccessibilityStateChecked": "Checked",
  "AccessibilityStateExpanded": true,
  "AutomationId": "accessibility",
  "AutomationPositionInSet": 1,
  "AutomationSizeOfSet": 1,
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 76,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 76,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "A View with accessibility values.",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "Current Number of Accessibility Taps: 0",
              "Top": 19,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 38,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "Height": 19,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Text": "This element should be hidden from accessibility.",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 718,
                  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                },
              ],
            },
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 57,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewControl",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                  "children": [
                    {
                      "Background": null,
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 19,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 718,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                      "children": [
                        {
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#FF000000",
                          "Height": 19,
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Text": "This sub-view should not have an accessibility value. It's control type does not support the value pattern.",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 718,
                          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ViewTests Views can have background colors 1`] = `
{
  "AutomationId": "view-test-background-color",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 25,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": "#FF527FE4",
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 25,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 15,
              "HorizontalAlignment": "Stretch",
              "Left": 5,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "Blue background",
              "Top": 5,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 708,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ViewTests Views can have borders 1`] = `
{
  "AutomationId": "view-test-border",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 45,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#FF527FE4",
          "BorderThickness": "5,5,5,5",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 45,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 15,
              "HorizontalAlignment": "Stretch",
              "Left": 15,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "5px blue border",
              "Top": 15,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 688,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ViewTests Views can have overflow 1`] = `
{
  "AutomationId": "view-test-overflow",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 20,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 20,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "1,1,1,1",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 12,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 95,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 10,
                  "HorizontalAlignment": "Stretch",
                  "Left": 1,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 1,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 93,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "Height": 20,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "undefined",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 200,
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "1,1,1,1",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 12,
              "HorizontalAlignment": "Stretch",
              "Left": 111,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 95,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": "Windows.UI.Xaml.Media.RectangleGeometry",
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 10,
                  "HorizontalAlignment": "Stretch",
                  "Left": 1,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 1,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 93,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "Height": 20,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "hidden",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 200,
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "1,1,1,1",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 12,
              "HorizontalAlignment": "Stretch",
              "Left": 222,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 95,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 10,
                  "HorizontalAlignment": "Stretch",
                  "Left": 1,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 1,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 93,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "Height": 20,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "visible",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 200,
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ViewTests Views can have padding and margins 1`] = `
{
  "AutomationId": "view-test-padding-margin",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 107,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#FFBB0000",
          "BorderThickness": "0.5,0.5,0.5,0.5",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 107,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Background": "#FF527FE4",
              "BorderBrush": "#FF000033",
              "BorderThickness": "1,1,1,1",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 27,
              "HorizontalAlignment": "Stretch",
              "Left": 1,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 1,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 717,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "Height": 15,
                  "HorizontalAlignment": "Stretch",
                  "Left": 6,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Text": "5px padding",
                  "Top": 6,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 705,
                  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                },
              ],
            },
            {
              "Background": "#FF527FE4",
              "BorderBrush": "#FF000033",
              "BorderThickness": "1,1,1,1",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 17,
              "HorizontalAlignment": "Stretch",
              "Left": 6,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 33,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 707,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "Height": 15,
                  "HorizontalAlignment": "Stretch",
                  "Left": 1,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Text": "5px margin",
                  "Top": 1,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 705,
                  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                },
              ],
            },
            {
              "Background": "#FF527FE4",
              "BorderBrush": "#FF000033",
              "BorderThickness": "1,1,1,1",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 42,
              "HorizontalAlignment": "Stretch",
              "Left": 6,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 60,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 134,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "Height": 15,
                  "HorizontalAlignment": "Stretch",
                  "Left": 6,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Text": "5px margin and padding,",
                  "Top": 6,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 122,
                  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                },
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "Height": 15,
                  "HorizontalAlignment": "Stretch",
                  "Left": 6,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Text": "widthAutonomous=true",
                  "Top": 21,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 122,
                  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ViewTests Views can have ranging opacity 1`] = `
{
  "AutomationId": "view-test-opacity",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 133,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 133,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "Height": 19,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Text": "Opacity 0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 718,
                  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                },
              ],
            },
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 19,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "Height": 19,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Text": "Opacity 0.1",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 718,
                  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                },
              ],
            },
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 38,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "Height": 19,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Text": "Opacity 0.3",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 718,
                  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                },
              ],
            },
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 57,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "Height": 19,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Text": "Opacity 0.5",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 718,
                  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                },
              ],
            },
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 76,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "Height": 19,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Text": "Opacity 0.7",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 718,
                  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                },
              ],
            },
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 95,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "Height": 19,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Text": "Opacity 0.9",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 718,
                  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                },
              ],
            },
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 19,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 114,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "Height": 19,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Text": "Opacity 1",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 718,
                  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ViewTests Views can have rounded borders 1`] = `
{
  "AutomationId": "view-test-rounded-borders",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 50,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 50,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "1,1,1,1",
              "Clip": null,
              "CornerRadius": "25,25,25,25",
              "FlowDirection": "LeftToRight",
              "Height": 50,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 50,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
            },
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "10,10,10,10",
              "Clip": null,
              "CornerRadius": "25,25,25,25",
              "FlowDirection": "LeftToRight",
              "Height": 50,
              "HorizontalAlignment": "Stretch",
              "Left": 60,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 50,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
            },
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "1,1,1,1",
              "Clip": null,
              "CornerRadius": "5,10,25,25",
              "FlowDirection": "LeftToRight",
              "Height": 50,
              "HorizontalAlignment": "Stretch",
              "Left": 120,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 50,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
            },
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "10,10,10,10",
              "Clip": null,
              "CornerRadius": "5,10,25,25",
              "FlowDirection": "LeftToRight",
              "Height": 50,
              "HorizontalAlignment": "Stretch",
              "Left": 180,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 50,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
            },
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "6,6,0,0",
              "Clip": null,
              "CornerRadius": "20,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 50,
              "HorizontalAlignment": "Stretch",
              "Left": 240,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 50,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
            },
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "0,6,6,0",
              "Clip": null,
              "CornerRadius": "0,20,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 50,
              "HorizontalAlignment": "Stretch",
              "Left": 290,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 50,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
            },
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "6,0,0,6",
              "Clip": null,
              "CornerRadius": "0,0,0,20",
              "FlowDirection": "LeftToRight",
              "Height": 50,
              "HorizontalAlignment": "Stretch",
              "Left": 340,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 50,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
            },
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "0,0,6,6",
              "Clip": null,
              "CornerRadius": "0,0,20,0",
              "FlowDirection": "LeftToRight",
              "Height": 50,
              "HorizontalAlignment": "Stretch",
              "Left": 390,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 50,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ViewTests Views can have tool tips 1`] = `
{
  "AutomationId": "tool-tip",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 45,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Tooltip": "Parent View",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": null,
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Height": 45,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "Height": 15,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Text": "This Parent View has tooltip "Parent View"",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 15,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Tooltip": "Child View 1",
              "Top": 15,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "Height": 15,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Text": "This view has tooltip "Child View 1"",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 718,
                  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                },
              ],
            },
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 15,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Tooltip": "Child View 2",
              "Top": 30,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "Height": 15,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Text": "This view has tooltip "Child View 2"",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 718,
                  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;
